--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif;
     line-height: 1.5;
-    background: #ffffff;
+    background: #9b9797;
 }
 
 h1,
@@ -28,5 +28,20 @@ img {
 
 button {
     cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid #9b9797;
+}
 
+input {
+    width: 100%;
+    height: 30px;
+    outline: none;
+    border: 1px solid #525050;
+    border-radius: 5px;
+    transition: border-color 0.25s ease-in-out;
+    padding: 8px;
+
+    &:focus {
+        border-color: #dead59;
+    }
 }
